--- a/resources/sass/partials/_base.scss
+++ b/resources/sass/partials/_base.scss
@@ -86,6 +86,11 @@
   .thumbnail {
     .mail-file-img {
       position: relative;
+      background-color: #e9eef1 !important;
+
+      img {
+         height: 120px !important;
+      }
     }
   }
 }
