--- a/public/css/app.css
+++ b/public/css/app.css
@@ -91,6 +91,19 @@
   padding-right: 15px;
 }
 
+.form-inline.form-search {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-inline.form-search .form-group {
+  flex: 0 0 33.3333%;
+}
+
+.form-inline.form-search .form-group input {
+  width: 100%;
+}
+
 @media (min-width: 768px) {
   .navbar-header:before {
     background-color: #fff !important;
