--- a/public/css/app.css
+++ b/public/css/app.css
@@ -104,6 +104,14 @@
   width: 100%;
 }
 
+.modal-backdrop {
+  z-index: 10000 !important;
+}
+
+.modal {
+  z-index: 10001 !important;
+}
+
 @media (min-width: 768px) {
   .navbar-header:before {
     background-color: #fff !important;
