--- a/resources/sass/partials/_base.scss
+++ b/resources/sass/partials/_base.scss
@@ -137,6 +137,12 @@
    z-index: 10001 !important;
 }
 
+.products .title {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 @media (min-width: 768px) {
   .navbar-header:before {
     background-color: #fff !important;
